--- a/README
+++ b/README
@@ -31,6 +31,10 @@ then editing config/database.yml.
 Here's how to setup Heroku (assuming you already have an account, etc.):
 
   gem install heroku
+  apt-get install sqlite3 libsqlite3-dev
+  gem install taps:
+    sqlite3-ruby-1.3.1
+  gem update taps heroku
   As your normal user:
     heroku create
     git push heroku master
@@ -40,6 +44,7 @@ Here's how to setup Heroku (assuming you already have an account, etc.):
     heroku logs
     heroku rake db:migrate
     heroku restart
+    heroku db:push
 
 == Running Tests
 
