--- a/README
+++ b/README
@@ -54,11 +54,13 @@ Here's how to setup Heroku (assuming you already have an account, etc.):
 
 == TODO
 
+ * Build a website and show the tree graphically.
+ * Give more help when creating or editing nodes.
+ * Make it possible to skip the story.
  * Get a non-toll-free number for Europeans.
  * It'd be fun to use RealTime to listen in on people who create new nodes.
  * Ask Anthony Eden how to make the choice stuff more Ruby-ish.
  * Test coverage.
- * Don't let people edit the root node.
  * Figure out the right voice in the feature file.  Who am I?
  * Acknowledge Abraham who gave me the idea.
 
