--- a/README
+++ b/README
@@ -64,6 +64,30 @@ Here's how to setup Heroku (assuming you already have an account, etc.):
  * Figure out the right voice in the feature file.  Who am I?
  * Acknowledge Abraham who gave me the idea.
 
+Per Anthony Eden, do something like this for Choice:
+
+  class Choice
+    def self.evaluate(&block)
+      new.instance_eval(&block)
+    end
+
+    def label(label)
+    end
+
+    def digits(value)
+    end
+
+    def view(&view_block)
+    end
+
+    def controller(&controller_block)
+    end
+  end
+
+  def choice(&block)
+    Choice.evaluate(&block)
+  end
+
 == Welcome to Rails
 
 Rails is a web-application framework that includes everything needed to create 
